eicb-p1/src/test/testcases/errors/p1_public/task_priv_2/missing_RPAREN_Call_err.syn.mavl
function void main() {
	println("Hello, World!";
}
